--- a/src/app/film-catalog/film-list/film-item/film-item.component.html
+++ b/src/app/film-catalog/film-list/film-item/film-item.component.html
@@ -9,11 +9,10 @@
   <mat-card-content> 
     <details-inner>
         {{filmItem.description}}
-      </details-inner> 
+    </details-inner> 
    </mat-card-content>
   <mat-card-actions>
     <button mat-button>Открыть</button>
-    <!-- <button mat-button (click)="addToFavorite()"><mat-icon>{{filmItem.isFavorite ? 'favorite_border' : 'favorite'}}</mat-icon></button> -->
-    <mat-icon (click)="addToFavorite()">{{filmItem.isFavorite ? 'favorite_border' : 'favorite'}}</mat-icon>
+    <mat-icon (click)="addToFavorite()">{{filmItem.isFavorite ? 'favorite' : 'favorite_border'}}</mat-icon>
   </mat-card-actions>
 </mat-card>
