--- a/src/app/film-catalog/film-list/film-item/film-item.component.html
+++ b/src/app/film-catalog/film-list/film-item/film-item.component.html
@@ -13,6 +13,8 @@
    </mat-card-content>
   <mat-card-actions>
     <button mat-button>Открыть</button>
-    <mat-icon (click)="addToFavorite()">{{filmItem.isFavorite ? 'favorite' : 'favorite_border'}}</mat-icon>
+    <mat-icon [swal]="['Cool!', 'Film ' + filmItem.name + isFavorite + ' favorite', 'success' ]" (confirm)="addToFavorite()">
+      {{filmItem.isFavorite ? 'favorite' : 'favorite_border'}}
+    </mat-icon>
   </mat-card-actions>
 </mat-card>
