--- a/src/app/film-catalog/film-list/film-item/film-item.component.css
+++ b/src/app/film-catalog/film-list/film-item/film-item.component.css
@@ -4,8 +4,13 @@
   color: #000000;
 }
 
+:host {
+  max-width: 380px;
+}
+
 .card:hover {
   transform: scale(1.01);
+  transition: all .2s ease;
 }
 
 mat-card-header {
@@ -16,16 +21,34 @@ mat-card-header mat-card-title {
   font-size: 16px;
 }
 
+mat-card-header mat-progress-spinner {
+  margin-right: 15px;
+  margin-left: -20px;
+}
+
+mat-card-header p {
+  position: absolute;
+  display: flex;
+  align-items: center;
+  width: 50px;
+  height: 50px;
+  justify-content: center;
+  top: 8px;
+  margin-left: -20px;
+
+}
+
+mat-card-header p span {
+  font-size: 11px;
+}
+
 mat-card img {
-  width: 100%;
+  /* width: 100%; */
   height: 60%;
 }
 
 mat-card-content {
-  white-space: nowrap;
   width: 100%;
-  overflow: hidden;
-  text-overflow: ellipsis;
 }
 
 mat-card-actions {
