--- a/src/app/film-catalog/film-list/film-list.component.css
+++ b/src/app/film-catalog/film-list/film-list.component.css
@@ -41,3 +41,17 @@ form {
   width: 100%;
 }
 
+.pagination {
+  display: flex;
+  justify-content: space-between;
+  padding: 0 5%;
+}
+
+.pagination button {
+  box-shadow: 0 3px 1px -2px rgba(0,0,0,.2), 0 2px 2px 0 rgba(0,0,0,.14), 0 1px 5px 0 rgba(0,0,0,.12);
+}
+
+.button-group {
+  display: flex;
+  align-items: center;
+}
