--- a/src/app/film-catalog/film-list/film-list.component.html
+++ b/src/app/film-catalog/film-list/film-list.component.html
@@ -1,14 +1,13 @@
 <mat-card class="menu-card">
+  <!-- <div>
+    <span*ngIf="showLoader" class="loading"></span>
+  </div> -->
+  <app-loader></app-loader>
   <mat-toolbar class="menu-toolbar">
     <mat-toolbar-row>
-
-      <p><span><mat-icon>{{favCount ? 'star_rate' : 'stars'}}</mat-icon></span> {{favCount}} films</p><span class="menu-spacing"></span>
-
-      <div class="search">
-        <mat-form-field class="example-full-width">
-          <input matInput placeholder="Search film" [(ngModel)]="qwery" (ngModelChange)="search($event)"><mat-icon>search</mat-icon>
-        </mat-form-field>
-      </div>
+      <app-search-input [changeIndex]='changeIndex' (searchItem)="getSearchValue($event)"  [value]='qwery'></app-search-input>
+      <!-- <p><span><mat-icon>{{favCount ? 'star_rate' : 'stars'}}</mat-icon> </span> {{favCount}} {{changeIndex == 0 ? 'film' : 'actor' }}</p> -->
+      <span class="menu-spacing"></span>
 
       <div>
         <mat-form-field>
@@ -23,17 +22,63 @@
   </mat-toolbar>
 </mat-card>
 <mat-card>
-  <div [ngClass]="{'no-matches': films.length === 0}" *ngIf="films.length === 0">
-    <h4>With this request <span>"{{qwery}}" </span> didn't found anything.... Sorry :( </h4>
-    <h3>Pls, try again ;)</h3>
-    <img src="../assets/img/404_page.jpg" alt="">
-</div>
-
-  <mat-grid-list cols="3" class="search-results" rowHeight="600px" *ngIf="films.length !== 0">
-    <mat-grid-tile *ngFor="let film of films | slice:0:show" class="my-grid-tile">
-      <app-film-item [filmItem]='film' (add)="setFavFilms($event)"></app-film-item>
-    </mat-grid-tile>
-  </mat-grid-list>
-  <button mat-button class="show-more" (click)="show = show+3; animation($event)" *ngIf="show < films.length">Load more  {{films.length-show}} films...</button>
+  
+    
+  <mat-tab-group dynamicHeight="true" (selectedTabChange)="changeLayout($event)">
+    <mat-tab label="Films">
+      <div [ngClass]="{'no-matches': filmTotalResults === 0 }" *ngIf="filmTotalResults === 0">
+        <h4>With this request <span>"{{qwery}}" </span> didn't found anything.... Sorry :( </h4>
+        <h3>Pls, try again ;)</h3>
+        <img src="../assets/img/404_page.jpg" alt="notFound">
+      </div>
+      <mat-grid-list cols="4" class="search-results" rowHeight="800px">
+          <mat-grid-tile *ngFor="let film of filmsData$" class="my-grid-tile">
+            <app-film-item [filmItem]='film' [filmImg]='film.poster_path' (add)="setFavFilms($event)"></app-film-item>
+          </mat-grid-tile>
+      </mat-grid-list>
+      <div class="pagination">
+          <div class="info-page">
+            <p>Currently on page: {{filmCurrentPage}} of {{filmTotalPage}} pages of films</p>
+            <p>({{filmTotalResults}} results)</p>
+          </div>
+          <div class="button-group">
+            <button mat-button class="show-more" (click)="previousPageFilm()" *ngIf="filmCurrentPage > 1">
+              <mat-icon>keyboard_arrow_left</mat-icon>  
+            </button>
+            <button mat-button class="show-more" (click)="nextPageFilm()" *ngIf="filmCurrentPage !== filmTotalPage">
+              <mat-icon>keyboard_arrow_right</mat-icon>
+            </button>
+          </div>
+        </div>
+    </mat-tab>
+    
+    <mat-tab label="Actors">
+      <div [ngClass]="{'no-matches': actorTotalResults === 0 }" *ngIf="actorTotalResults === 0">
+        <h4>With this request <span>"{{qwery}}" </span> didn't found anything.... Sorry :( </h4>
+        <h3>Pls, try again ;)</h3>
+        <img src="../assets/img/404_page.jpg" alt="notFound">
+      </div>
+      <mat-grid-list cols="4" class="search-results" rowHeight="800px">
+          <mat-grid-tile *ngFor="let actor of actorsData$" class="my-grid-tile" >
+              <app-actor-item [actorItem]='actor' [actorPopularity]='actor.popularity' [actorImg]='actor.profile_path'></app-actor-item>
+          </mat-grid-tile>
+      </mat-grid-list>
+      <div class="pagination">
+          <div class="info-page">
+            <p>Currently on page: {{actorCurrentPage}} of {{actorTotalPage}} pages of actors</p>
+            <p>({{actorTotalResults}} results)</p>
+          </div>
+          <div class="button-group">
+            <button mat-button class="show-more" (click)="previousPageActor()" *ngIf="actorCurrentPage > 1">
+              <mat-icon>keyboard_arrow_left</mat-icon>
+            </button>
+            <button mat-button class="show-more" (click)="nextPageActor()" *ngIf="actorCurrentPage !== actorTotalPage">
+              <mat-icon>keyboard_arrow_right</mat-icon>
+            </button>
+          </div>
+        </div>
+    </mat-tab>
+  </mat-tab-group>
+  <!-- <button mat-button class="show-more" (click)="show = show+show" *ngIf="show < filmsData.length">Load more  {{filmsData.length-show}} films...</button> -->
 
 </mat-card>
